check_output.txt
    Checking anochi v0.1.0 (/home/irfan/projects/anochi)
error: expected type, found `}`
  --> src/vm/tree_walk/vm_value/mod.rs:47:1
   |
20 | impl VmFunc {
   |             - while parsing this item list starting here
...
47 | }
   | ^
   | |
   | expected type
   | the item list ends here

warning: unused import: `std::fmt`
 --> src/ast/expression.rs:1:5
  |
1 | use std::fmt;
  |     ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `Keyword`
 --> src/ast/expression.rs:5:55
  |
5 | use crate::token::token_type::{Identifier, TokenType, Keyword};
  |                                                       ^^^^^^^

error[E0308]: mismatched types
   --> src/vm/tree_walk/mod.rs:407:33
    |
407 |             self.extract_struct(inputs)?;
    |                  -------------- ^^^^^^ expected `StructValue`, found `VmValue`
    |                  |
    |                  arguments to this method are incorrect
    |
note: method defined here
   --> src/vm/tree_walk/mod.rs:118:12
    |
118 |     pub fn extract_struct(&mut self, strct: StructValue) -> Result<(), VmError> {
    |            ^^^^^^^^^^^^^^            ------------------

error[E0277]: the `?` operator can only be used in a closure that returns `Result` or `Option` (or another type that implements `FromResidual`)
   --> src/vm/tree_walk/mod.rs:407:40
    |
406 |         let inside_fn=||{
    |                       -- this function should return `Result` or `Option` to accept `?`
407 |             self.extract_struct(inputs)?;
    |                                        ^ cannot use the `?` operator in a closure that returns `()`

error[E0308]: mismatched types
   --> src/vm/tree_walk/mod.rs:400:68
    |
400 |     fn execute_function(&mut self,func_id:&FuncId,inputs:VmValue)->VmExprResult{
    |        ----------------                                            ^^^^^^^^^^^^ expected `Result<VmValue, VmError>`, found `()`
    |        |
    |        implicitly returns `()` as its body has no tail or `return` expression
    |
    = note:   expected enum `Result<VmValue, tree_walk::VmError>`
            found unit type `()`

warning: unused variable: `func`
   --> src/vm/tree_walk/vm_value/mod.rs:209:27
    |
209 |             VmValue::Func(func) => None,
    |                           ^^^^ help: if this is intentional, prefix it with an underscore: `_func`
    |
    = note: `#[warn(unused_variables)]` on by default

error[E0004]: non-exhaustive patterns: `&VmValue::Func(_)` not covered
   --> src/vm/tree_walk/vm_value/mod.rs:229:15
    |
229 |         match self {
    |               ^^^^ pattern `&VmValue::Func(_)` not covered
    |
note: `VmValue` defined here
   --> src/vm/tree_walk/vm_value/mod.rs:108:10
    |
108 | pub enum VmValue {
    |          ^^^^^^^
...
112 |     Func(FuncId),
    |     ---- not covered
    = note: the matched value is of type `&VmValue`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
    |
262 ~             },
263 +             &VmValue::Func(_) => todo!()
    |

warning: unused variable: `object`
   --> src/vm/tree_walk/mod.rs:196:17
    |
196 |                 object,
    |                 ^^^^^^ help: try ignoring the field: `object: _`

warning: unused variable: `member`
   --> src/vm/tree_walk/mod.rs:197:17
    |
197 |                 member,
    |                 ^^^^^^ help: try ignoring the field: `member: _`

Some errors have detailed explanations: E0004, E0277, E0308.
For more information about an error, try `rustc --explain E0004`.
warning: `anochi` (lib) generated 5 warnings
error: could not compile `anochi` (lib) due to 5 previous errors; 5 warnings emitted
